--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,139 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 * {
     margin: 0;
+    outline: none;
     font-family: 'Roboto', sans-serif;
+}
+
+body {
+    background: #000046;
+    background: -webkit-linear-gradient(to top, #000046, #1cb5e0);
+    background: linear-gradient(to top, #000046, #1cb5e0) no-repeat;
+    height: 100vh;
+    box-sizing: border-box;
+}
+
+section.zip_container_wrapper {
+    display: flex;
+    justify-content: center;
+    padding-top: 2em;
+    box-sizing: border-box;
+}
+
+div.zip_container {
+    background: red;
+    display: inline-block;
+    padding: 15px;
+    border-radius: 10px;
+    /* display: flex; */
+    box-shadow: 0px 0px 3px grey;
+    background: #000428;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #004e92, #000428);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #004e92, #000428);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+div.zip_container input,
+div.zip_container select,
+div.zip_container select option,
+div.zip_container button {
+    padding: 10px;
+}
+
+div.zip_container h3{
+    text-align: center;
+    color: white;
+    padding: 5px 10px;
+}
+
+div.zip_container select option {
+    font-size: larger;
+    display: inline-block;
+}
+
+div.zip_container input {
+    font-weight: bold;
+    color: blue;
+}
+
+div.zip_container select {
+    box-sizing: content-box;
+    max-width: 8em;
+}
+
+div.zip_container button {
+    font-weight: bold;
+}
+
+section.zip_value_container_wrapper {
+    width: 86%;
+    margin: 0 auto;
+    background: white;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 2em;
+    max-width: 48em;
+}
+
+div.zip_value_container {
+    display: flex;
+    height: 1em;
+}
+
+div.zip_value_container div {
+    display: flex;
+}
+
+div.zip_value_container div p {
+    width: 100%;
+    border: none;
+    background: none;
+    font-weight: bold;
+    padding: 0px 10px;
+}
+
+div.zip_map_container {
+    height: 24em;
+    padding-top: 1em;
+}
+
+div.zip_map_container iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+.loader {
+    display: none;
+    position: absolute;
+    border-top: 2px solid #000a31;
+    border-radius: 50%;
+    top: 49%;
+    left: 45%;
+    width: 60px;
+    height: 60px;
+    justify-content: center;
+    animation: spinner 0.5s linear infinite;
+}
+
+@keyframes spinner {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+footer.main-div_footer {
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+    color: #fffffffa;
+    font-size: 12px;
+    padding: 3px;
+    background-color: #00498a;
+    position: fixed;
 }
